--- a/web.html
+++ b/web.html
@@ -6,6 +6,7 @@
     <body>
         <div>
             <h1>Hasta que me maten bebe </h1>
+            <h2>clase githubs to the ou</h2>
         </div>
     </body>
 </html>
